[package]
name = "worker-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "This is a tool to be used as a custom build command for a Cloudflare Workers `workers-rs` project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
dirs-next = "2.0.0"
flate2 = "1.0.24"
tar = "0.4.38"
ureq = { version = "2.4.0", features = ["tls", "gzip"] }

[dev-dependencies]
tempdir = "0.3.7"
wasm-bindgen-cli-support = "0.2.80"
