[package]
name = "worker-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Macros to support the `worker` crate and remove FFI boilerplate / conversion from user code."

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.56"
worker-sys = { path = "../worker-sys" }
syn = "1.0.96"
proc-macro2 = "1.0.39"
quote = "1.0.18"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-macro-support = "0.2.80"
